--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,8 @@
-@import '~bootstrap/scss/bootstrap'
+@use './partials/variables' as *;
+
+@import '~bootstrap/scss/bootstrap';
+$fa-font-path: "../fonts/webfonts" !default;
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
