--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,3 +6,7 @@ $fa-font-path: "../fonts/webfonts" !default;
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
+
+header{
+    background-color: #F7F7F7;
+}
