fix style  admin

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -10,3 +10,8 @@ $fa-font-path: "../fonts/webfonts" !default;
 header{
     background-color: #F7F7F7;
 }
+body{
+    background-color: black;
+
+
+}
